[package]
authors = ["Nick Massey <nickmass@nickmass.com>"]
name = "mass-acme"
version = "0.1.0"

[dependencies]
clap = "2.30.0"
env_logger = "0.5.4"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.1"
rusoto_core = "0.31.0"
rusoto_credential = "0.10.0"
rusoto_route53 = "0.31.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"

[dependencies.acme-client]
default-features = false
version = "0.5.1"
